@@ -47,7 +47,7 @@
  * This bootloader enumerates to the host as a HID Class device, allowing for Teensy compatible programming
  * software to load firmware onto the AVR, such as the official software at <a>http://www.pjrc.com/teensy/</a>.
  *  
- * Out of the box this bootloader builds for the ATMEGA32U4, and will fit into 4KB of bootloader space. For other
+ * Out of the box this bootloader builds for the ATMEGA32U4, and will fit into 2-4KB of bootloader space. For other
  * devices, the makefile will need to be updated to reflect the altered MCU model and bootloader start address. When
  * calculating the bootloader start address, use (TARGET_FLASH_SIZE_BYTES - 4096).
  *
