@@ -36,7 +36,7 @@ void USB_INT_DisableAllInterrupts(void)
 	#if defined(USB_SERIES_6_AVR) || defined(USB_SERIES_7_AVR)
 	USBCON &= ~((1 << VBUSTE) | (1 << IDTE));				
 	#elif defined(USB_SERIES_4_AVR)
-	USBCON &= ~(1 << VBUSTE);					
+	USBCON &= ~(1 << VBUSTE);
 	#endif
 	
 	#if defined(USB_CAN_BE_HOST)
