@@ -73,6 +73,7 @@
 				 *  USB interface should be initialized in low speed (1.5Mb/s) mode.
 				 *
 				 *  \note Low Speed mode is not available on all USB AVR models.
+				 *        \n\n
 				 *
 				 *  \note Restrictions apply on the number, size and type of endpoints which can be used
 				 *        when running in low speed mode -- refer to the USB 2.0 standard.
